fix mobile hero vertical overlap

--- a/css/style.css
+++ b/css/style.css
@@ -274,12 +274,10 @@ figure figcaption {
 }
 
 #hero {
-  min-height: 500px;
   background: #fff;
   width: 100%;
-  float: left;
-  /* margin-bottom: 10em; */
-  clear: both;
+  /* float: left; */
+  /* clear: both; */
 }
 #hero .flexslider {
   border: none;
